[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Safe Network Data Types"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe-nd"
readme = "README.md"
repository = "https://github.com/maidsafe/safe-nd"
version = "10.1.0"

[dependencies]
bincode = "1.2.1"
ed25519-dalek = "~0.9.1"
hex_fmt = "~0.3.0"
multibase = "~0.6.0"
rand = "~0.6"
crdts = "4.1.0"
sha3 = "~0.8.2"
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.1"
crdts = "4.0.0"

  [dependencies.serde]
  version = "1.0.91"
  features = [ "derive" ]

[dev-dependencies]
hex = "~0.3.2"
rand_xorshift = "~0.1.1"

[features]
default = [ "ed25519-dalek/serde" ]
simulated-payouts = []
