[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Safe Network Data Types"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "sn_data_types"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_data_types"
version = "0.11.16"

[dependencies]
bincode = "1.2.1"
multibase = "~0.8.0"
hex_fmt = "~0.3.0"
rand = "~0.7.3"
crdts = "4.2.0"
sha3 = "~0.8.2"
threshold_crypto = "~0.4.0"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.1"
xor_name = "1.1.0"
ed25519 = "1.0.1"
signature = "1.1.0"

  [dependencies.ed25519-dalek]
  version = "1.0.0-pre.4"
  features = [ "serde" ]

  [dependencies.serde]
  version = "1.0.91"
  features = [ "derive" ]

[dev-dependencies]
hex = "~0.3.2"
rand_xorshift = "~0.2.0"

[features]
simulated-payouts = [ ]
